# UCSP-Paralelos

./: .gitignore  LICENSE
cache/: test1.cpp  test2.cpp
cuda/: color2gray.cu  device_launch_parameters.h  imgBlur.cu
cuda/grayscale/: grayscale.cpp  pr.cpp
cuda/imageFilter/: CMakeLists.txt  blur.cu  blur.cuh  compile.sh  grayScale.cu  grayScale.cuh  main.cpp  main.cu
cuda/imageFilter/Blur/: blurImage.cpp  blurImage.h  blurcuda.cu  blurimagecuda.h
cuda/imageFilter/GrayScale/: GrayScale.cpp  GrayScale.h  grayscale.cu  grayscalecuda.h
cuda/matrixAdd/: matrixAdd.cu
cuda/vectorAdd/: addition.cu  additionMM.cu  additionMM2.cu
matrixMult/: README.md  cachegrind.out.blocks  cachegrind.out.blocks_db  cachegrind.out.normal  cachegrind.out.normal_db  matrixMult.cpp  matrixMultBlock.cpp
mpi/matrixVectorMult/: matrixVector.cpp
mpi/matrixVectorMult/book/: run.sh
mpi/oddEvenSort/: mpi_odd_even.c  odd_even.c  run.sh
mpiMatrixVector/: matrixVector.cpp
mpiMatrixVector/book/: mpi_mat_vect_time.c
myutils/: mtime.hpp  symlink.sh
omp/: omp_mat_vect_rand_split.c  omp_odd_even1.c  omp_odd_even2.c  run.sh  run_odd_even.sh
pthread/busyWaiting/: cpprun.sh  crun.sh  piCalcBusy.cpp  pth_pi_busy2.c
pthread/linkedList/: pth_ll_mult_mut.c  pth_ll_one_mut.c  pth_ll_rwl.c
pthread/matVecMult/: pth_mat_vect_rand_split.c  run.sh
pthread/mutex/: cpprun.sh  crun.sh  piCalcMutex.cpp  pth_pi_mutex.c
